add_subdirectory(Arzhantsev.I.V)
add_subdirectory(Arzhantsev.I.V,Timashev.D.A)
add_subdirectory(Dynnikov.I.A)
add_subdirectory(Fedorchuk.V.V)
add_subdirectory(Golod.E.S)
add_subdirectory(Klyachko.A.A)
add_subdirectory(Latyshev.V.N)
add_subdirectory(Manuilov.V.M)
add_subdirectory(Prochorov.Yu.G)
add_subdirectory(SEM.Linear.Algebra.Helpers)
add_subdirectory(Shmelkin.A.L)
add_subdirectory(Sklyarenko.E.G)
add_subdirectory(Vinberg.E.B)
add_subdirectory(Zaytsev.M.V)
