add_subdirectory(Arnold.V.I)
add_subdirectory(Filimonov.A.M)
add_subdirectory(Filippov.A.F)
add_subdirectory(Ilyashenko.Yu.S)
add_subdirectory(Kondratiev.V.A)
add_subdirectory(Konkov.A.A)
add_subdirectory(Kozlov)
add_subdirectory(MSU.PDE.Department)
add_subdirectory(Prikhodko.A.A)
add_subdirectory(Radkevich.E.V)
add_subdirectory(Sergeev.I.N)
add_subdirectory(Shamaev.A.S)
add_subdirectory(Shaposhnikova.T.A)
add_subdirectory(Zakalukin.V.M)
