# add_subdirectory(Bogaty.S.A)
# add_subdirectory(Fomenko.A.T)
add_subdirectory(Gusein-Zade.S.M)
# add_subdirectory(Manuilov.V.M)
# add_subdirectory(misc)
# add_subdirectory(Mokhov.O.I)
# add_subdirectory(Popelensky.F.Yu)
# add_subdirectory(Shafarevich.A.I)
# add_subdirectory(Sklyarenko.E.G)
# add_subdirectory(Troitsky.E.V)
# add_subdirectory(Tujilin.A.A)
