add_subdirectory(Dyachenko.M.I)
add_subdirectory(Gurevich.B.M)
add_subdirectory(Kumskov.M.I)
add_subdirectory(Latyshev.V.N)
add_subdirectory(Lupanov.O.B)
add_subdirectory(Nosov.M.V)
add_subdirectory(Popelensky.F.Yu)
add_subdirectory(Rozanova.O.S)
add_subdirectory(Rozendorn.E.R)
add_subdirectory(Ryzhikov.V.V)
add_subdirectory(Shafarevich.A.I)
add_subdirectory(Shekhtman.V.B)
add_subdirectory(Tutubalin.V.N)
