add_subdirectory(Afanasjeva.L.G)
add_subdirectory(Diploma.Blank)
add_subdirectory(Dorofeeva.A.V,Smirnova.G.S)
add_subdirectory(Economics.Seminars)
add_subdirectory(English.Topics)
add_subdirectory(EP.Civil.Law)
add_subdirectory(Gena.E.I)
add_subdirectory(Holikov.A.A)
add_subdirectory(Math.History.Department)
add_subdirectory(Math.History.Summary)
add_subdirectory(Mindeli.E.I)
add_subdirectory(Osetrov.G.V)
add_subdirectory(Peganova.O.M)
add_subdirectory(Perminov.V.Ya)
add_subdirectory(Petrova.S.S,Demidov.S.S)
add_subdirectory(Poroshin.V.D)
add_subdirectory(Pronkin.S.V)
